Update title to reflect repo name

--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8" />
     <link rel="stylesheet" type="text/css" href="./style.css" />
     <script src="./game.js"></script>
-    <title>Squash a Bug!</title>
+    <title>Smash a Bug!</title>
   </head>
   <body>
-    <h1>Squash-A-Bug!</h1>
+    <h1>Smash-A-Bug!</h1>
     <p>
       For those days when you bang your head on the desk while trying to squash
       the bugs in your code... when you need to vent your frustration, squash
