--- a/index.html
+++ b/index.html
@@ -37,6 +37,6 @@
     </div>
   </body>
   <footer>
-    <a href="https://www.nhcarrigan.com">&copy; Nicholas Carrigan</a>
+    <a href="https://www.nhcarrigan.com">&copy; Naomi Carrigan</a>
   </footer>
 </html>
